<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/linearLayout1">

            <ImageButton
                android:id="@+id/buttonClose"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/close_white"
                android:background="@null"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/filter"
                android:layout_marginLeft="80dp"
                android:textColor="@color/white"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/resetFiltter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resetfilter"
                android:gravity="center"
                android:visibility="visible"
                android:textColor="@color/white"/>

        </LinearLayout>


        <TextView
            android:id="@+id/textViewFilterDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="15.11 - 20.11"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:background="@color/semi_transparent"
            android:padding="5dp"
            android:textSize="18sp"
            android:drawableRight="@drawable/checkmark"
            android:drawableLeft="@drawable/ic_downarow_white"
            android:visibility="gone"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calLayout"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/period"
                android:textSize="18sp"
                android:textColor="@color/white"
                />

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"/>
        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catogory"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/textViewcat"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_selected"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:id="@+id/textViewselectall"
                android:textSize="18sp"
                android:visibility="gone"/>

            <TextView
                android:layout_below="@+id/textViewcat"
                android:id="@+id/textViewFilterCatg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/all_catg_selected"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:background="@color/semi_transparent"
                android:padding="5dp"
                android:textSize="18sp"
                android:drawableLeft="@drawable/ic_downarow_white"/>

            <android.support.v7.widget.RecyclerView
                android:background="@color/semi_transparent"
                android:id="@+id/catgRecyclerview"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp10"
                android:padding="10dp"
                android:layout_height="400dp"
                android:layout_below="@id/textViewcat"
                android:visibility="gone"/>

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:text="@string/takeover"
            android:id="@+id/buttonProgramFilter"
            android:background="@drawable/btn_selector"
            android:gravity="center"
            android:textSize="@dimen/sp17"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="@drawable/btn_text_selector"
            />


    </LinearLayout>

</ScrollView>
