<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/header_two"
        android:layout_gravity="top"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            tools:context="com.reformation.home.SettingScreen">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textColor="@color/black"
                android:text="@string/language"
                android:id="@+id/textViewLang"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="14dp"/>
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true">
                <Button
                    android:id="@+id/langDeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/lang_german"
                    android:textAllCaps="false"
                    android:textColor="@drawable/lang_setting_text_selector"
                    android:background="@drawable/language_selector"/>
                <Button
                    android:id="@+id/langEngBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/lang_eng"
                    android:textColor="@drawable/lang_setting_text_selector"
                    android:background="@drawable/language_selector"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewLang"
                android:layout_marginTop="@dimen/dp20"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:orientation="vertical"
                android:background="@drawable/gray_roundshape_bg">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:text="@string/visitor_info"
                    android:id="@+id/settingTextViewVisitorInfo"
                    android:drawableRight="@drawable/list_arrow"
                    android:gravity="left" />
                <View
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/light_grey"/>
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/list_arrow"
                    android:text="@string/audio_video_guide"
                    android:id="@+id/settingTextViewAudioGuide"
                    android:gravity="left" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll1"
                android:layout_marginTop="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:orientation="vertical"
                android:background="@drawable/gray_roundshape_bg">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:text="@string/contact"
                    android:id="@+id/settingTextViewContact"
                    android:gravity="left"
                   />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:text="0049-3491-6434-700"
                    android:id="@+id/settingTextViewMobNo"
                    android:gravity="left"
                    android:autoLink="phone"
                    />
                <View
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/light_grey"/>
                <TextView
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:text="@string/email_contact"
                    android:drawableRight="@drawable/list_arrow"
                    android:id="@+id/settingTextViewEmailCont"
                    android:gravity="left" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll2"
                android:layout_marginTop="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:orientation="vertical"
                android:background="@drawable/gray_roundshape_bg">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:id="@+id/settingTextViewJublle"
                    android:drawableRight="@drawable/list_arrow"
                    android:gravity="left"
                    android:text="@string/aniversary_partner"
                    android:layout_gravity="center_horizontal"/>
                <View
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp1"
                    android:background="@color/light_grey"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black"
                    android:text="@string/imprintTxt"
                    android:layout_marginTop="@dimen/dp10"
                    android:id="@+id/settingTextViewImprint"
                    android:drawableRight="@drawable/list_arrow"
                    android:gravity="left" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll3"
                android:layout_marginTop="@dimen/dp10"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:orientation="vertical"
                android:background="@drawable/grey_bag_roundshape">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@color/black_grey"
                    android:text="@string/aniversary_partner"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp20"
                    android:paddingBottom="@dimen/dp20"
                    android:background="@color/white">
                    <android.support.v7.widget.RecyclerView
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/anniversaryRecycleview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingLeft="@dimen/dp40"
                        android:visibility="gone"/>
                    <ProgressBar
                        android:id="@+id/dlg"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:layout_centerInParent="true"
                        android:indeterminate="true"
                        android:indeterminateDrawable="@drawable/custom_progress" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
