<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/dp40">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp40">
            <include
                android:layout_height="@dimen/home_imageHeight"
                android:layout_width="match_parent"
                layout="@layout/image_layout"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTopicTitle"
                android:textStyle="bold"
                android:textSize="@dimen/sp17"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                style="@style/header_title_15px"
                android:textColor="@color/text_color_six"
                android:textSize="@dimen/sp15"
                android:id="@+id/textViewTopicDesc"
                android:gravity="top"
                android:text="desc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginTop="@dimen/dp10"
                android:background="@color/light_grey"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewFreeTxt"
                    android:textSize="@dimen/sp17"
                    android:textColor="@color/text_color_seven"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/free"/>
                <TextView
                    android:layout_below="@+id/textViewFreeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAudioGuide"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp15"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/audio_guide"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:layout_alignTop="@+id/textViewAudioGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewOverview"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp17"
                    android:textColor="@color/blue"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:text="@string/overview"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_audioguide"
                android:background="@drawable/gray_roundshape_bg"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp10"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/sp17"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/gallery"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_gallery"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp10"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/sp17"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_gravity="left"
                android:gravity="center"
                android:text="@string/more_event"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_more_events"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/dp10"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/header_two"
        android:layout_gravity="top"/>


</FrameLayout>
